--- a/Services/Auth_Service/Properties/launchSettings.json
+++ b/Services/Auth_Service/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "Authorization_Service": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "auth",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
