--- a/Services/Room_Service/Room_Service.csproj
+++ b/Services/Room_Service/Room_Service.csproj
@@ -4,9 +4,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3"/>
+    <PackageReference Include="PingPongMicro" Version="1.0.1"/>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3"/>
   </ItemGroup>
 </Project>
