--- a/Services/OpeningHours_Service/OpeningHours_Service.csproj
+++ b/Services/OpeningHours_Service/OpeningHours_Service.csproj
@@ -17,4 +17,7 @@
 	<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.1" />
 	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
