--- a/Services/Reservation_Service/appsettings.json
+++ b/Services/Reservation_Service/appsettings.json
@@ -6,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=pingpongapp;Uid=reservationService;Pwd=reservationServicePassword"
-  }
+  "AllowedHosts": "*"
 }
