--- a/Services/Reservation_Service/Reservation_Service.csproj
+++ b/Services/Reservation_Service/Reservation_Service.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
+<ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.1" />
+  </ItemGroup>
 
 </Project>
