--- a/Services/Reservation_Service/Reservation_Service.csproj
+++ b/Services/Reservation_Service/Reservation_Service.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-<ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.2" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.1" />
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.2"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.2"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.1"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
   </ItemGroup>
-
 </Project>
