--- a/Services/Reservation_Service/Reservation_Service.csproj
+++ b/Services/Reservation_Service/Reservation_Service.csproj
@@ -7,5 +7,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.2"/>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.1"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
+    <PackageReference Include="PingPongMicro" Version="1.0.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3"/>
   </ItemGroup>
 </Project>
