--- a/Services/Auth_Service/Auth_Service.csproj
+++ b/Services/Auth_Service/Auth_Service.csproj
@@ -3,15 +3,20 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.0" />
-    <PackageReference Include="PingPongMicro" Version="1.0.1" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.0.2" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.2" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.0"/>
+    <PackageReference Include="PingPongMicro" Version="1.0.1"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.2"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.2"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.2"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.0.2"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.2"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
   </ItemGroup>
-  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties properties_4launchsettings_1json__JsonSchema=""/>
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
