--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.4.1",
     "ngx-bootstrap": "^5.6.1",
     "ngx-toastr": "^11.3.3",
+    "ngx-ui-switch": "^8.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
