--- a/Services/Reservation_Service/Reservation_Service.csproj
+++ b/Services/Reservation_Service/Reservation_Service.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
     <PackageReference Include="PingPongMicro" Version="1.0.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4"/>
   </ItemGroup>
 </Project>
