--- a/Services/HomePageService/Properties/launchSettings.json
+++ b/Services/HomePageService/Properties/launchSettings.json
@@ -11,7 +11,7 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false, 
       "launchUrl": "HomePageService",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -19,9 +19,9 @@
     },
     "HomePageService": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "HomePageService",
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:1000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
