--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
+    "ng2-charts": "^2.3.2",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-toastr": "^11.3.3",
