--- a/Services/HomePageService/appsettings.json
+++ b/Services/HomePageService/appsettings.json
@@ -11,8 +11,8 @@
     "DefaultConnection": "Server=localhost; Database=pingpongapp;Uid=homePageService;Pwd=homePageServicePassword"
   },
   "CloudinarySettings": {
-    "CloundName": "lalalsdasdlfsdfsdlfalegtt",
-    "ApiKey": "346758968765467890-87654",
-    "ApiSecret": "dknb5pi34jb4owgo4bi045b9hbw43bg7eghbw49b"
+    "CloundName": "gasdgvbrea",
+    "ApiKey": "127619125766575",
+    "ApiSecret": "iTPUPZwLsEfmTnSWo1Q5ywNgf7A"
   }
 }
