--- a/Services/OpeningHours_Service/Properties/launchSettings.json
+++ b/Services/OpeningHours_Service/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "openinghoursservice",
-      "applicationUrl": "http://localhost:5004",
+      "applicationUrl": "https://localhost:5004",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
