--- a/Services/Reservation_Service/Properties/launchSettings.json
+++ b/Services/Reservation_Service/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "reservationService",
-      "applicationUrl": "http://localhost:5006",
+      "applicationUrl": "https://localhost:5006",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
