--- a/Services/Room_Service/Properties/launchSettings.json
+++ b/Services/Room_Service/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "rooms",
-      "applicationUrl": "http://localhost:5002",
+      "applicationUrl": "https://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
